--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
-<p><!--this element is for regular text hi mom -->
-  I went to the store and bought some celery.
-</p>
-
-<h1>
-  go back home
-</h1>
-
-<h2>
-  I love celery.
-</h2>
-
-<img src="https://www.thespruceeats.com/thmb/NNqfj_ujhPrLjk9UKxr7wxTIgDg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/what-is-celery-5199268-hero-01-cb9c645dfb614f0a8eef5b0c316ce16d.jpg" width="200" alt="2 bunches of celery">
-
-<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/203876717&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/birocratic" title="Birocratic" target="_blank" style="color: #cccccc; text-decoration: none;">Birocratic</a> · <a href="https://soundcloud.com/birocratic/celery-man" title="celery man" target="_blank" style="color: #cccccc; text-decoration: none;">celery man</a></div>
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      
+      
+    </style> 
+  </head>
+  <body>
+    <p><!--this element is for regular text hi mom -->
+      I went to the store and bought some celery.
+    </p>
+    <h1>
+      go back home
+    </h1>      
+    <h2>
+      I love celery.
+    </h2>
+    <img src="https://www.thespruceeats.com/thmb/NNqfj_ujhPrLjk9UKxr7wxTIgDg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/what-is-celery-5199268-hero-01-cb9c645dfb614f0a8eef5b0c316ce16d.jpg" width="200" alt="2 bunches of celery">
+  </body>
+</html>
