--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <title>Pluto moves</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <style>
+      body {
+        background-color: green;
+        color: white;
+        font-family: "Host Grotesk", sans-serif;
+      }
       
       
     </style> 
   </head>
   <body>
-    <p><!--this element is for regular text hi mom -->
-      I went to the store and bought some celery.
-    </p>
-    <h1>
-      go back home
-    </h1>      
-    <h2>
-      I love celery.
-    </h2>
-    <img src="https://www.thespruceeats.com/thmb/NNqfj_ujhPrLjk9UKxr7wxTIgDg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/what-is-celery-5199268-hero-01-cb9c645dfb614f0a8eef5b0c316ce16d.jpg" width="200" alt="2 bunches of celery">
+    <center>
+      <p><!--this element is for regular text hi mom -->
+        I went to the store and bought some celery.
+      </p>
+      <h1>
+        go back home
+      </h1>      
+      <h2>
+        I love celery.
+      </h2>
+      <img src="https://www.thespruceeats.com/thmb/NNqfj_ujhPrLjk9UKxr7wxTIgDg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/what-is-celery-5199268-hero-01-cb9c645dfb614f0a8eef5b0c316ce16d.jpg" width="200" alt="2 bunches of celery">
+    </center>
   </body>
 </html>
