--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <style>
       body {
         background-color: green;
+        background-image: url("stars.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
         color: white;
         font-family: "Host Grotesk", sans-serif;
-      }
-      
-      
+      }   
     </style> 
   </head>
   <body>
