insert pluto image

--- a/index.html
+++ b/index.html
@@ -13,23 +13,30 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        color: white;
+        color: rgb(209, 204, 255);
         font-family: "Host Grotesk", sans-serif;
-      }   
+      }
+      #smalltext {
+        color: rgb(255, 255, 255);
+        margin: auto;
+        margin-top: 500px;
+      }
     </style> 
   </head>
   <body>
     <center>
-      <p><!--this element is for regular text hi mom -->
-        I went to the store and bought some celery.
-      </p>
+     
       <h1>
         go back home
       </h1>      
+      
+      <img src="pluto.png" width="500" alt="2 bunches of celery">
       <h2>
-        I love celery.
+        Pluto moves into darkness
       </h2>
-      <img src="https://www.thespruceeats.com/thmb/NNqfj_ujhPrLjk9UKxr7wxTIgDg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/what-is-celery-5199268-hero-01-cb9c645dfb614f0a8eef5b0c316ce16d.jpg" width="200" alt="2 bunches of celery">
+       <p id="smalltext">
+        I went to the store and bought some celery.
+      </p>
     </center>
   </body>
 </html>
