--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <h2>
         Pluto moves into darkness
       </h2>
-       <p id="smalltext">
+       <a href="https://xtine333.github.io/videopage/" id="smalltext">
         I went to the store and bought some celery.
-      </p>
+      </a>
     </center>
   </body>
 </html>
